[package]
name = "SCoreRust"
version = "0.1.0"
edition = "2021"

[lib]
name = "SCoreRust"
crate-type = ["staticlib"]

[dependencies]
ferris-says = "0.2.1"
rand_distr = "0.4.3"
rand = "0.8.5"
ndarray = { version = "0.15.4", features = ["rayon"] }
extendr-api = { git = 'https://github.com/extendr/extendr', features = ["ndarray"] }
rayon = "1.5.3"
hdf5 = "0.8.1"
sprs = "0.11.0"
